...
      }
    },
    "Allow Notifications" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "Are you Hispanic/Latino?" : {
      "localizations" : {
        "en-GB" : {
...
      }
    },
    "Close" : {
      "localizations" : {
        "es" : {
...
      }
    },
    "Coming Soon" : {
      "localizations" : {
        "en-GB" : {
...
      }
    },
    "Comorbidities" : {
      "localizations" : {
        "en-GB" : {
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Consent Survey"
          }
        },
...
      }
    },
    "Continue" : {
      "localizations" : {
        "en-GB" : {
...
      }
    },
    "Cycling" : {
      "localizations" : {
        "en-GB" : {
...
      }
    },
    "Demographics" : {
      "localizations" : {
        "en-GB" : {
...
      }
    },
    "Done" : {
      "localizations" : {
        "en-GB" : {
...
      }
    },
    "Education Level" : {
      "localizations" : {
        "en-GB" : {
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Prefer not to state"
          }
        },
...
      }
    },
    "Health Records" : {
      "localizations" : {
        "en-GB" : {
...
      }
    },
    "HealthKit Access" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "Heart Failure" : {
      "localizations" : {
        "en-GB" : {
...
      }
    },
    "Learn More" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "Master's Degree" : {
      "localizations" : {
        "en-GB" : {
...
      }
    },
    "Next" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "No" : {
      "localizations" : {
        "en-GB" : {
...
      }
    },
    "Notifications" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "OK" : {
      "localizations" : {
        "en-GB" : {
...
      }
    },
    "Race / Ethnicity" : {
      "localizations" : {
        "en-GB" : {
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Alaska Native"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "White"
          }
        },
...
      }
    },
    "Read from Health App" : {
      "localizations" : {
        "en-GB" : {
...
      }
    },
    "Region Not Yet Supported" : {
      "localizations" : {
        "en-GB" : {
...
      }
    },
    "Review Consent Forms" : {
      "localizations" : {
        "en-GB" : {
...
      }
    },
    "Review Permissions" : {
      "localizations" : {
        "en-GB" : {
...
      }
    },
    "Stage of Change" : {
      "localizations" : {
        "en-GB" : {
...
      }
    },
    "Start" : {
      "localizations" : {
        "en-GB" : {
...
      }
    },
    "Testing Support" : {
      "localizations" : {
        "en-GB" : {
...
      }
    },
    "Today's Tasks" : {
      "localizations" : {
        "en-GB" : {
...
      }
    },
    "Total Household Income" : {
      "localizations" : {
        "en-GB" : {
...
      }
    },
    "True" : {
      "localizations" : {
        "en-GB" : {
...
      }
    },
    "US State / Territory" : {
      "localizations" : {
        "en-GB" : {
...
      }
    },
    "Welcome to My Heart Counts" : {
      "localizations" : {
        "en-GB" : {
...
      }
    },
    "What country do you currently live in?" : {
      "localizations" : {
        "en-GB" : {
...
      }
    },
    "Workout Preference" : {
      "localizations" : {
        "en-GB" : {
...
      }
    },
    "Yes" : {
      "localizations" : {
        "en-GB" : {
...
      }
    },
    "Your Account" : {
      "localizations" : {
        "en-GB" : {
...
